feat: Finalização da tela de cadastro

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <header>
-        <a class="logo" href="#"><img src="imagem/logo5.png"></a>
+        <a class="logo" href="index.html"><img src="imagem/logo5.png"></a>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Dicas</a></li>
                 <li><a href="#">Funcionalidades</a></li>
-                <li><a href="#">Cadastro</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
         <a class="cta" href="#">Acesso</a>
@@ -27,7 +27,7 @@
             <div class="overlay_content">
                 <a href="#">Dicas</a>
                 <a href="#">Funcionalidades</a>
-                <a href="#">Cadastro</a>
+                <a href="cadastro.html">Cadastro</a>
                 <a href="#">Acesso</a>
             </div>
         </div>
